# drf-user-service

./: .env.example  .gitignore  README.md  build.sh  pyproject.toml
profiles_project/profiles_api/: models.py  permissions.py  serializers.py  urls.py  views.py
profiles_project/profiles_api/migrations/: 0001_initial.py  0002_profilefeeditem.py
profiles_project/profiles_project/: settings.py  urls.py
